--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   grid-template-columns: 1fr 1fr;
   background-color: #e8e8e8;
   border-radius: 13px;
+  border: 1px solid #E2C044;
 }
 
 
@@ -60,4 +61,37 @@ body {
   text-decoration: none;
   color: #999999;
   border: 1px solid #999999;
+}
+
+.shadow
+{
+    position:relative;
+    -webkit-box-shadow:0 0px 0px rgba(0, 0, 0, 0.1), 0 0 10px rgba(0, 0, 0, 0) inset;
+       -moz-box-shadow:0 0px 0px rgba(0, 0, 0, 0.1), 0 0 10px rgba(0, 0, 0, 0) inset;
+            box-shadow:0 0px 0px rgba(0, 0, 0, 0.1), 0 0 10px rgba(0, 0, 0, 0) inset;
+}
+.shadow:before, .shadow:after
+{
+  content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 10px rgba(0,0,0,0.5);
+    -moz-box-shadow:0 0 10px rgba(0,0,0,0.5);
+    box-shadow:0 0 40px rgba(0,0,0,0.5);
+    top:50%;
+    bottom:0;
+    left:30px;
+    right:30px;
+    -moz-border-radius:100px / 20px;
+    border-radius:100px / 20px;
+}
+.shadow:after
+{
+  right:10px;
+    left:auto;
+    -webkit-transform:skew(8deg) rotate(3deg);
+       -moz-transform:skew(8deg) rotate(3deg);
+        -ms-transform:skew(8deg) rotate(3deg);
+         -o-transform:skew(8deg) rotate(3deg);
+            transform:skew(8deg) rotate(3deg);
 }
