text to interface

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 /*Fonte & Background*/
 body {
-	background-color: #E2C044;
+	background-color: #8b4367;
 	font-family: 'Scope One', serif;
 	color: white;
 }
