--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 @import url('style/shadow.css');
 @import url('style/vinyl.css');
 @import url('style/texture.css');
+@import url('style/slider.css');
+@import url('style/player.css');
 
 /*Fonte & Background*/
 body {
@@ -26,9 +28,10 @@ body {
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  margin-top: 20vh;
   background-color: #e8e8e8;
   border-radius: 13px;
-  border: 1px solid #E2C044;
+  border: 20px solid black;
 }
 
 /*.stand {
@@ -40,4 +43,10 @@ body {
 
 .player {
   align-self: center;
+}
+
+ .inner-border {
+  
+  box-shadow: inset 5px 7px 8px 8px #453b3be0;
+  box-sizing: border-box; /* Include padding and border in element's width and height */
 }
