--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /*Google Fonts*/
 @import url('https://fonts.googleapis.com/css?family=Scope+One&display=swap');
+
+/*Interface Components*/
 @import url('style/button.css');
 @import url('style/shadow.css');
 @import url('style/vinyl.css');
@@ -31,7 +33,7 @@ body {
   margin-top: 20vh;
   background-color: #e8e8e8;
   border-radius: 13px;
-  border: 20px solid black;
+  border-right: 10vw solid #e8e8e8;
 }
 
 /*.stand {
@@ -47,6 +49,6 @@ body {
 
  .inner-border {
   
-  box-shadow: inset 5px 7px 8px 8px #453b3be0;
+  box-shadow: inset 0px 7px 8px 8px #453b3be0;
   box-sizing: border-box; /* Include padding and border in element's width and height */
 }
